Finish automl sota

--- a/document/Bibliography.bib
+++ b/document/Bibliography.bib
@@ -388,7 +388,7 @@
 @misc { 60,
   author = {Lisha Li and Kevin Jamieson and Giulia DeSalvo and Afshin Rostamizadeh and Ameet Talwalkar},
   title = {Hyperband: bandit-based configuration evaluation for hyperparameter optimization},
-  year = {2017},
+  year = {2018},
   notes = {In International Conference on Learning Representations}
 }
 
@@ -462,4 +462,30 @@
   title = {General-purpose hierarchical optimisation of machine learning pipelines with grammatical evolution},
   year = {2020},
   notes = {Information Sciences}
+}
+
+@misc { 72,
+  author = {Swearingen, T. and Drevo, W. and Cyphers, B. and Cuesta-Infante, A. and Ross, A. and Veeramachaneni, K.},
+  title = {ATM: A distributed, collaborative, scalable system for automated machine learning},
+  year = {2017},
+  notes = {In IEEE International Conference on Big Data, pp. 151-162.}
+}
+
+@misc { 73,
+  author = {E. LeDell and S. Poirier},
+  title = {H2O AutoML: Scalable Automatic Machine Learning},
+  year = {2020}
+}
+
+@misc { 74,
+  author = {Komer, B. and Bergstra, J. and Eliasmith, C},
+  title = {Hyperopt-Sklearn: Automatic Hyperparameter Configuration for Scikit-Learn},
+  year = {2014},
+  notes = {In International Conference on Machine Learning AutoML Workshop, pp. 2825-2830}
+}
+
+@misc { 75,
+  author = {Lars Kotthof and Chris Thornton and Holger H. Hoos and Frank Hutter and Kevin Leyton-Brown},
+  title = {Auto-WEKA 2.0: Automatic model selection and hyperparameter optimization in WEKA},
+  year = {2016}
 }
