--- a/document/MainMatter/Background.tex
+++ b/document/MainMatter/Background.tex
@@ -65,5 +65,42 @@ El rendimiento puede ser estimado basado en \textit{lower fidelities} del actual
 
 Otra estrategia aplicada con éxito a las redes neuronales convolucionales (Convolutional Neural Networks, CNN) es compartir pesos entre diferentes modelos, lo que se conoce como compartición de parámetros o compartición de pesos \parencite{62}. Para NAS diferenciables con un gran modelo one-shot, la compartición de parámetros se logra naturalmente ya que las arquitecturas y los pesos se entrenan conjuntamente. Sin embargo, entrenar el modelo one-shot puede ser difícil ya que contiene todas las operaciones posibles. Para acelerar aún más el proceso de entrenamiento, \textit{single-path one-shot} fue propuesto \parencite{63} en el que solo se activa una operación entre un par de entrada y salida durante cada paso. Para NAS sin un modelo \textit{one-shot}, compartir pesos entre diferentes arquitecturas es más difícil pero no del todo imposible. Por ejemplo, dado que se sabe que algunos filtros convolucionales son extractores de características comunes, heredar pesos de arquitecturas anteriores es factible y razonable en las CNN \parencite{64}. 
 
+\section{Sistemas AutoML}
+En esta sección se describen algunos sistemas de AutoML, los cuales fueron elegidos según su popularidad, son \textit{frameworks AutoML} capaces de construir \textit{pipelines} completos de \textit{machine learning}:
 
+\subsection{Auto-Weka} 
+Auto-Weka \parencite{13} considera una amplia gama de técnicas de selección de características (que combinan 3 métodos de búsqueda y 8 de evaluación) y todos los enfoques de clasificación implementados en la librería WEKA, que abarcan 2 métodos de conjunto, 10 metamétodos, 27 clasificadores básicos y configuraciones de hiperparámetros para cada clasificador.   
+
+El software de aprendizaje automático WEKA pone técnicas de \textit{machine learning} de última generación a disposición incluso de los usuarios más novatos. Sin embargo, estos usuarios normalmente no saben cómo elegir entre las docenas de procedimientos de \textit{machine learning} implementados en WEKA y la configuración de hiperparámetros de cada procedimiento para lograr un buen rendimiento. Auto-WEKA aborda este problema al tratar todo WEKA como un único marco de aprendizaje automático altamente paramétrico, y al usar la optimización bayesiana para encontrar una instancia sólida para un conjunto de datos determinado.
+
+Desde el lanzamiento inicial de un prototipo de investigación utilizable en 2013 \parencite{13}, se han realizado mejoras sustanciales en el paquete Auto-WEKA. En un nivel prosaico, se han corregido errores, mejorado las pruebas y la documentación, y actualizado el software para que funcione con las últimas versiones de WEKA y Java. También se han agregado cuatro características principales.
+
+Primero, ahora se admiten algoritmos de regresión, expandiendo Auto-WEKA más allá de su enfoque anterior en la clasificación. En segundo lugar, ahora se admite la optimización de todas las métricas de rendimiento que admite WEKA. En tercer lugar, ahora se admite ejecuciones paralelas de forma nativa(en una sola máquina) para encontrar buenas configuraciones más rápido y guardar las $N$ mejores configuraciones de cada ejecución en lugar de solo la mejor. Cuarto, Auto-WEKA 2.0 ahora está completamente integrado con WEKA. Esto es importante, porque el quid de Auto-WEKA radica en su simplicidad: proporciona una interfaz de botón que no requiere conocimiento sobre los algoritmos de aprendizaje disponibles o sus hiperparámetros, y le pide al usuario que proporcione, además del conjunto de datos que se procesará, solo un límite de memoria (1 GB de forma predeterminada) y el presupuesto de tiempo general disponible para todo el proceso de aprendizaje. El presupuesto general se establece en 15 minutos de forma predeterminada para acomodar a los usuarios impacientes; las ejecuciones más largas permiten que el optimizador bayesiano busque en el espacio más a fondo.
+
+La facilidad de uso del prototipo de investigación anterior se vio obstaculizada por el hecho de que los usuarios tenían que descargar Auto-WEKA manualmente y ejecutarlo por separado de WEKA. Por el contrario, Auto-WEKA 2.0 está disponible a través del administrador de paquetes de WEKA. Los usuarios no necesitan instalar el software por separado; todo está incluido en el paquete y se instala automáticamente a pedido. Después de la instalación, Auto-WEKA 2.0 se puede utilizar de dos maneras diferentes:
+\begin{itemize}
+    \item Como metaclasificador: Auto-WEKA se puede ejecutar como cualquier otro algoritmo de aprendizaje automático en WEKA: a través de la GUI, la interfaz de línea de comandos o la API pública. La figura 2 muestra cómo ejecutarlo desde la línea de comandos.
+    \item A través de la pestaña Auto-WEKA: Esto proporciona una interfaz personalizada que oculta parte de la complejidad. La figura 3 muestra el resultado de una ejecución de ejemplo.
+\end{itemize}
+
+El código fuente de Auto-WEKA está alojado en GitHub (https://github.com/automl/autoweka) y está disponible bajo la licencia GPL (versión 3). Los lanzamientos se publican en el repositorio de paquetes WEKA y están disponibles a través del administrador de paquetes WEKA y del sitio web del proyecto Auto-WEKA (http://automl.org/autoweka).
+
+\subsection{TPOT} 
+TPOT \parencite{27} es un sistema AutoML de código abierto basado en programación genética que optimiza una serie de preprocesadores de características y modelos de \textit{machine learing} con el objetivo de maximizar la precisión de clasificación en una tarea de clasificación supervisada.
+
+\subsection{Hyperopt-Sklearn} 
+Hyperopt-sklearn \parencite{74} es un proyecto de software que proporciona una configuración automática de algoritmos de la biblioteca de \textit{machine learning} de \textit{Scikit-learn}. Siguiendo a \textit{Auto-Weka}, se considera que la elección del clasificador e incluso la elección del módulo de preprocesamiento se pueden tomar en conjunto para representar un único gran problema de optimización de hiperparámetros. Hyperopt se usa para definir un espacio de búsqueda que abarca muchos componentes estándar (por ejemplo, SVM, RF, KNN, PCA, TFIDF) y patrones comunes para componerlos juntos. Mejoró las puntuaciones más conocidas para el espacio modelo tanto para \textit{MNIST} como para \textit{Convex Shapes}.
+
+La biblioteca \textit{Hyperopt} ofrece algoritmos de optimización para espacios de búsqueda que surgen en la configuración de algoritmos. Estos espacios se caracterizan por una variedad de tipos de variables (continuas, ordinales, categóricas), diferentes perfiles de sensibilidad (por ejemplo, escalado uniforme versus logarítmico) y estructura condicional (cuando se puede elegir entre dos clasificadores, los parámetros de un clasificador son irrelevantes cuando se elige el otro clasificador).
+
+\subsection{Auto-Sklearn} 
+Auto-Sklearn \parencite{6} es un sistema AutoML basado en \textit{scikit-learn} (que utiliza 15 clasificadores, 14 métodos de preprocesamiento de características y 4 métodos de preprocesamiento de datos, lo que da lugar a un espacio de hipótesis estructurado con 110 hiperparámetros). Este sistema, que se denomina \textit{AUTO-SKLEARN}, mejora los métodos AutoML existentes al tener en cuenta automáticamente el rendimiento anterior en conjuntos de datos similares y al construir conjuntos a partir de los modelos evaluados durante la optimización. Este sistema ganó la primera fase del desafío \textit{ChaLearn AutoML}, y el análisis integral en más de 100 conjuntos de datos diversos muestra que supera sustancialmente el estado del arte anterior en AutoML.
+
+\subsection{ATM}
+ Auto-Tuned Models, o ATM \parencite{72}, es un sistema distribuido, colaborativo y escalable para el aprendizaje automático automatizado. Los usuarios de ATM pueden simplemente cargar un conjunto de datos, elegir un subconjunto de métodos de modelado y optar por utilizar \textit{ ATM's hybrid Bayesian} y \textit{ multi-armed bandit optimization system}. El sistema distribuido funciona con equilibrio de carga para entregar rápidamente resultados en forma de modelos listos para predecir, matrices de confusión, resultados de validación cruzada y tiempos de entrenamiento. Al automatizar el ajuste de hiperparámetros y la selección de modelos, ATM devuelve el énfasis del flujo de trabajo de aprendizaje automático a su parte más irreductible: la ingeniería de funciones.
+
+\subsection{H2O AutoML}
+H2O \parencite{73} es una plataforma de aprendizaje automático distribuido de código abierto diseñado para escalar a conjunto de datos muy grandes, con APIs en R, Python, Java y Scala. H2O AutoML, es un algoritmo de aprendizaje altamente escalable, totalmente automatizado y supervisado que automatiza el proceso de entrenamiento de un gran conjunto de modelos candidatos y conjuntos apilados dentro de una sola función. El resultado de la ejecución de AutoML es una "tabla de clasificación": una lista clasificada de modelos, los cuales se pueden exportar fácilmente para su uso en un entorno de producción. Los modelos en la tabla se pueden clasificar según numerosas métricas de rendimiento o por algunos atributos del modelo, como el tiempo de entrenamiento o la velocidad promedio de predicción por fila. 
+
+El algoritmo AutoML de H2O se basa en el entrenamiento eficiente de los algoritmos de aprendizaje automático de H2O para producir una gran cantidad de modelos en poco tiempo. H2O AutoML utiliza una combinación de búsqueda aleatoria rápida y conjuntos apilados para lograr resultados competitivos y, a menudo, mejores que otros \textit{frameworks} que se basan en técnicas de ajuste de modelos más complejas, como optimización bayesiana o algoritmos genéticos. H2O AutoML entrena una variedad de algoritmos (p. ej., \textit{GBM}, \textit{Random Forests}, \textit{Deep Neural Networks}, \textit{GLM}), lo que produce una buena cantidad de diversidad entre los modelos candidatos, que pueden explotarse mediante conjuntos apilados para producir un modelo final potente. La eficacia de esta técnica se refleja en \textit{OpenML AutoML Benchmark}, que compara el rendimiento de varios de los sistemas AutoML de código abierto más conocidos en varios conjuntos de datos.
 
